bugfixes and security fixes

--- a/playbook.yml
+++ b/playbook.yml
@@ -2,7 +2,7 @@
 - hosts: localhost
   become: yes
   roles:
-    - { role: base, tags: ['base'] }
+   # - { role: base, tags: ['base'] }
     - { role: gnupg, tags: ['gnupg'] }
     - { role: cron, tags: ['cron'] }
     - { role: microcode, tags: ['microcode'], when: "'GenuineIntel' in ansible_processor" }
@@ -12,10 +12,10 @@
     - { role: ssd, tags: ['ssd'] }
     - { role: fonts, tags: ['fonts'] }
     - { role: x, tags: ['x'] }
-    - { role: lightdm, tags: ['lightdm'], when: "display_manager == 'lightdm'" }
-    - { role: gdm, tags: ['gdm'], when: "display_manager == 'gdm'" }
-    - { role: i3, tags: ['i3'], when: "desktop_environment == 'i3'" }
-    - { role: gnome, tags: ['gnome'], when: "desktop_environment == 'gnome'" }
+   # - { role: lightdm, tags: ['lightdm'], when: "display_manager == 'lightdm'" }
+   # - { role: gdm, tags: ['gdm'], when: "display_manager == 'gdm'" }
+   # - { role: i3, tags: ['i3'], when: "desktop_environment == 'i3'" }
+   # - { role: gnome, tags: ['gnome'], when: "desktop_environment == 'gnome'" }
     - { role: pass, tags: ['pass'] }
     - { role: iptables, tags: ['iptables'] }
     - { role: nettools, tags: ['nettools'] }
@@ -60,7 +60,7 @@
     - { role: hashicorp, tags: ['hashicorp'] }
     - { role: virtualenv, tags: ['virtualenv'] }
     - { role: backitup, tags: ['backitup'] }
-    - { role: cryptshot, tags: ['cryptshot'], when: "cryptshot is defined" }
+    #- { role: cryptshot, tags: ['cryptshot'], when: "cryptshot is defined" }
     - { role: borg, tags: ['borg'] }
     - { role: tarsnap, tags: ['tarsnap'] }
     - { role: mapping, tags: ['mapping'] }
