--- a/roles/spell/tasks/main.yml
+++ b/roles/spell/tasks/main.yml
@@ -4,7 +4,7 @@
     name:
       - hunspell
       - hunspell-en_US
-      - hunspell-de_DE
+      - hunspell-de
     state: present
   tags:
     - hunspell
